Removing app insights extension from web app.

--- a/.github/workflows/copilot-deploy-frontend.yml
+++ b/.github/workflows/copilot-deploy-frontend.yml
@@ -21,7 +21,7 @@ permissions:
   contents: read
 
 jobs:
-  web-api:
+  web-app:
     environment: ${{inputs.ENVIRONMENT}}
     permissions:
       id-token: write
