Removing https from webApi since it will run within a container.

--- a/samples/apps/copilot-chat-app/webapi/appsettings.json
+++ b/samples/apps/copilot-chat-app/webapi/appsettings.json
@@ -147,7 +147,7 @@
   // OCR support is used for allowing end users to upload images containing text in addition to text based documents.
   // - Supported Types are "none" or "tesseract".
   // - When using Tesseract OCR Support (In order to upload image file formats such as png, jpg and tiff)
-  // - Obtain language data files here: https://github.com/tesseract-ocr/tessdata . 
+  // - Obtain language data files here: https://github.com/tesseract-ocr/tessdata .
   // - Add these files to your `data` folder or the path specified in the "FilePath" property and set the "Copy to Output Directory" value to "Copy if newer".
   //
 "OcrSupport": {
@@ -199,8 +199,8 @@
   // Server endpoints
   "Kestrel": {
     "Endpoints": {
-      "Https": {
-        "Url": "https://localhost:40443"
+      "Http": {
+        "Url": "http://localhost:40443"
       }
     }
   },
