--- a/.github/workflows/copilot-deploy-environment.yml
+++ b/.github/workflows/copilot-deploy-environment.yml
@@ -28,17 +28,17 @@ jobs:
       WEB_API_KEY: ${{secrets.WEB_API_KEY}}
       AZURE_OPENAI_ENDPOINT: ${{secrets.AZURE_OPENAI_ENDPOINT}}
 
-  # deploy-backend:
-  #   needs: [build, deploy-infra]
-  #   uses: ./.github/workflows/copilot-deploy-backend.yml
-  #   with:
-  #     ARTIFACT_NAME: ${{needs.build.outputs.artifact}}
-  #     DEPLOYMENT_NAME: ${{needs.deploy-infra.outputs.deployment-id}}
-  #     ENVIRONMENT: int
-  #   secrets:
-  #     AZURE_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
-  #     AZURE_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
-  #     AZURE_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+  deploy-backend:
+    needs: [build, deploy-infra]
+    uses: ./.github/workflows/copilot-deploy-backend.yml
+    with:
+      ARTIFACT_NAME: ${{needs.build.outputs.artifact}}
+      DEPLOYMENT_NAME: ${{needs.deploy-infra.outputs.deployment-id}}
+      ENVIRONMENT: int
+    secrets:
+      AZURE_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
+      AZURE_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
+      AZURE_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
 
   deploy-frontend:
     needs: [deploy-infra]
